list, bg and spacing fix

--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,8 @@ html {
 
 body {
   background-color: #070f00;
+  background-image: url("./pics/bg.png");
+  background-repeat: no-repeat;
   margin-left: 8rem;
   margin-right: 8rem;
 }
@@ -88,16 +90,21 @@ nav {
 /*fonts desktop start*/
 h1 {
   @include textBox($white, row, 50px, $fontStack, $fontNormal, 60px);
+  margin-bottom: 2rem;
 }
 
 h2 {
   @include textBox($white, row, 25px, $fontStack, $fontNormal, 30px);
+  margin-bottom: 2rem;
 }
 h3 {
   @include textBox($white, row, 40px, $fontStack, $fontBold, 48px);
+  width: 70%;
+  margin-bottom: 2rem;
 }
 h4 {
   @include textBox($white, row, 40px, $fontStack, $fontNormal, 48px);
+  margin-bottom: 2rem;
 }
 
 .text {
@@ -187,6 +194,7 @@ h4 {
   position: fixed;
   right: 0;
   top: 20rem;
+  max-width: 30%;
   .anchorText {
     @include textBox($wTonedDown, row, 10px, $fontStack, $fontBold, 12px);
   }
@@ -321,6 +329,7 @@ footer {
 .indexHeader {
   display: flex;
   flex-direction: row;
+  margin-bottom: 2rem;
 }
 .indexHeader1 {
   display: flex;
@@ -410,7 +419,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-self: center;
-  width: 100%;
+  width: 70%;
   margin-top: 5rem;
   padding-bottom: 3rem;
 }
@@ -448,6 +457,7 @@ footer {
 .workshopFlex {
   display: flex;
   width: 100%;
+  margin-bottom: 5rem;
 }
 .quote {
   width: 70%;
@@ -506,6 +516,8 @@ span {
 .gain {
   margin-top: 1.4rem;
   padding-left: 10rem;
+  display: inline-block;
+  
 }
 .whatWeDid {
   margin-top: -1rem;
